fix(mobile): Breaking links on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ body {
 	}
 .contact > * {
 	margin-left: 1em;
+	display: inline-block;
 }
 
 .portfolio p {
